# Soccer2027_Lorentz

./: BallSensor_soccer_main.cpp.cpp  CMakeLists.txt  Camera_soccer  Display.cpp  Encoder.cpp  README.md  aqa  main.cpp  platformio.ini
Ball/: Ball.cpp  Soccer2027_Lorentz.code-workspace
Ballsensor_soccer/: platformio.ini
Ballsensor_soccer/src/: main.cpp
Display_soccer/: platformio.ini
Encoder_soccer/src/: main.cpp
Line/: Line.cpp
Main_soccer/src/: main.cpp
SPItest_master/src/: main.cpp
SPItest_slave/: platformio.ini
SPItest_slave/src/: main.cpp
Soccer/: CMakeLists.txt  Soccer.cpp
Soccer_Lorentz/: .gitignore  CMakeLists.txt  ball.cpp
UI_soccer/: platformio.ini
UI_soccer/src/: main.cpp
main/: main.cpp
soccer_new/: CMakeLists.txt
src/: Display_soccer_main.cpp
